--- a/docs/changelog.yml
+++ b/docs/changelog.yml
@@ -138,52 +138,53 @@ pivot:
     "Vector search": ":Search Relevance/Vectors"
     Watcher: ":Data Management/Watcher"
 
-# Product-specific label blockers (optional)
-# Maps product IDs to lists of labels that prevent changelog creation for that product
-# If you run the changelog add command with the --prs option and a PR has any of these labels, the changelog is not created
-# add_blockers:
-#   elasticsearch,cloud-serverless:
-#     - ">non-issue"
-#     - ">test"
-#     - ">refactoring"
-#     - ":Delivery/Build"
-#     - ":Delivery/Tooling"
-
-# render_blockers:
-#   cloud-serverless:
-#     areas:
-#       - Allocation
-#       - Audit
-#       - Authentication
-#       - Autoscaling
-#       - CCR
-#       - CCS
-#       - "Cluster Coordination"
-#       - Codec
-#       - "Discovery-Plugins"
-#       - Engine
-#       - FIPS
-#       - Health
-#       - "ILM+SLM"
-#       - "IdentityProvider"
-#       - "Infra/CLI"
-#       - "Circuit Breakers"
-#       - "Infra/Core"
-#       - "Infra/Entitlements"
-#       - "Infra/Logging"
-#       - "Infra/Metrics"
-#       - "Infra/Node Lifecycle"
-#       - "Infra/Plugins"
-#       - "Infra/Transport API"
-#       - License
-#       - Monitoring
-#       - Packaging
-#       - Searchable Snapshots
-#       - "Snapshot/Restore"
-#       - Stats
-#       - Watcher
-#     types:
-#       - docs
-#   elasticsearch:
-#     types:
-#       - docs
+# Block configuration - combined create and publish blockers
+block:
+  # Global labels that block changelog creation for all products (comma-separated string)
+  create: ">non-issue, >test, >refactoring, :Delivery/Build, :Delivery/Tooling"
+  # Block changelog entries from publishing based on entry type or area
+  # publish:
+  #   types:
+  #     - deprecation
+  #     - known-issue
+  #   areas:
+  #     - "Internal"
+  # Product-specific overrides (override global blockers, don't merge)
+  # Dictionary key can be a single product ID or comma-separated product IDs
+  product:
+    'elasticsearch':
+      publish:
+        types:
+          - docs
+    'cloud-serverless':
+      publish:
+        areas:
+          - Allocation
+          - Audit
+          - Authentication
+          - Autoscaling
+          - CCR
+          - CCS
+          - "Cluster Coordination"
+          - Codec
+          - "Discovery-Plugins"
+          - Engine
+          - FIPS
+          - Health
+          - "ILM"
+          - IdentityProvider
+          - "Infra/CLI"
+          - "Infra/Logging"
+          - "Infra/Metrics"
+          - "Infra/Node Lifecycle"
+          - "Infra/Plugins"
+          - "Infra/Transport API"
+          - License
+          - Monitoring
+          - Packaging
+          - "Searchable Snapshots"
+          - "Snapshot/Restore"
+          - Stats
+          - Watcher
+        types:
+          - docs
