Remove unneeded default in description

--- a/rest-api-spec/src/main/resources/rest-api-spec/api/cluster.put_settings.json
+++ b/rest-api-spec/src/main/resources/rest-api-spec/api/cluster.put_settings.json
@@ -28,7 +28,7 @@
       "flat_settings": {
         "type": "boolean",
         "default": false,
-        "description": "Return settings in flat format (default: false)"
+        "description": "Return settings in flat format"
       },
       "master_timeout": {
         "type": "time",
