--- a/muted-tests.yml
+++ b/muted-tests.yml
@@ -339,6 +339,9 @@ tests:
 - class: org.elasticsearch.reindex.management.ReindexManagementMultiProjectIT
   method: testGettingReindexOnlyWorksForCorrectProject
   issue: https://github.com/elastic/elasticsearch/issues/141123
+- class: org.elasticsearch.xpack.esql.qa.single_node.PushQueriesIT
+  method: testEqualityAndOther {SEMANTIC_TEXT_WITH_KEYWORD}
+  issue: https://github.com/elastic/elasticsearch/issues/141170
 
 # Examples:
 #
