Addresses pr feedback

--- a/docs/changelog/141094.yaml
+++ b/docs/changelog/141094.yaml
@@ -1,5 +1,5 @@
 pr: 141094
-summary: Optimize TopNOperator to avoid resorting when input is already sorting
+summary: Optimize TopNOperator to avoid resorting when input is already sorted
 area: ES|QL
 type: enhancement
 issues:
