Mute org.elasticsearch.reindex.management.ReindexManagementMultiProjectIT testListingReindexOnlyWorksForCorrectProject #141122

--- a/muted-tests.yml
+++ b/muted-tests.yml
@@ -321,6 +321,9 @@ tests:
 - class: org.elasticsearch.xpack.rank.vectors.mapper.RankVectorsFieldMapperTests
   method: testSyntheticSource
   issue: https://github.com/elastic/elasticsearch/issues/141187
+- class: org.elasticsearch.reindex.management.ReindexManagementMultiProjectIT
+  method: testListingReindexOnlyWorksForCorrectProject
+  issue: https://github.com/elastic/elasticsearch/issues/141122
 
 # Examples:
 #
