--- a/muted-tests.yml
+++ b/muted-tests.yml
@@ -324,6 +324,9 @@ tests:
 - class: org.elasticsearch.reindex.management.ReindexManagementMultiProjectIT
   method: testListingReindexOnlyWorksForCorrectProject
   issue: https://github.com/elastic/elasticsearch/issues/141122
+- class: org.elasticsearch.xpack.entsearch.EnterpriseSearchRestIT
+  method: test {p0=entsearch/rules/40_rule_query_search/Perform a rule query with an organic query that must be rewritten to another query type}
+  issue: https://github.com/elastic/elasticsearch/issues/141200
 
 # Examples:
 #
