--- a/muted-tests.yml
+++ b/muted-tests.yml
@@ -330,6 +330,9 @@ tests:
 - class: org.elasticsearch.xpack.esql.qa.multi_node.GenerativeIT
   method: test
   issue: https://github.com/elastic/elasticsearch/issues/140859
+- class: org.elasticsearch.xpack.esql.qa.mixed.MixedClusterEsqlSpecIT
+  method: test {csv-spec:spatial-grid.GridGeohexByBoundsDropLocation}
+  issue: https://github.com/elastic/elasticsearch/issues/141233
 
 # Examples:
 #
