--- a/rest-api-spec/src/yamlRestTest/resources/rest-api-spec/test/search.vectors/172_knn_query_base64_vectors.yml
+++ b/rest-api-spec/src/yamlRestTest/resources/rest-api-spec/test/search.vectors/172_knn_query_base64_vectors.yml
@@ -122,6 +122,46 @@ setup:
   - match: { hits.hits.1.fields.name.0: "doc2" }
 
 ---
+"kNN query with hex byte vector":
+  # [10, 20, 30] is encoded as hex bytes in lowercase as '0a141e'
+  - do:
+      search:
+        index: knn_query_base64_index
+        body:
+          fields: [ "name" ]
+          query:
+            knn:
+              field: vector_byte
+              query_vector: "0a141e"
+              k: 2
+              num_candidates: 3
+
+  - match: { hits.total.value: 2 }
+  - match: { hits.hits.0._id: "1" }
+  - match: { hits.hits.0.fields.name.0: "doc1" }
+  - match: { hits.hits.1._id: "2" }
+  - match: { hits.hits.1.fields.name.0: "doc2" }
+
+---
+"kNN query with ambiguous hex/base64 byte string prefers hex":
+  # "000000" is 3 bytes in hex (00 00 00), but 4 bytes if base64-decoded; dims=3 should prefer hex
+  - do:
+      search:
+        index: knn_query_base64_index
+        body:
+          fields: [ "name" ]
+          query:
+            knn:
+              field: vector_byte
+              query_vector: "000000"
+              k: 2
+              num_candidates: 3
+
+  - match: { hits.total.value: 2 }
+  - match: { hits.hits.0._id: "/^[123]$/" }
+  - match: { hits.hits.1._id: "/^[123]$/" }
+
+---
 "kNN query with base64 produces same results as float array":
   - do:
       search:
@@ -171,7 +211,23 @@ setup:
   - set: { hits.hits.0._id: bfloat16_result_1 }
   - set: { hits.hits.1._id: bfloat16_result_2 }
 
-  # [0.1, 0.2, 0.3] is encoded as 'PczMzT5MzM0+mZma'
+  # [0.1, 0.2, 0.3] is encoded as bfloat16 bytes in base64 as 'Pc0+TT6a'
+  - do:
+      search:
+        index: knn_query_base64_index
+        body:
+          fields: [ "name" ]
+          query:
+            knn:
+              field: vector_bfloat16
+              query_vector: "Pc0+TT6a"
+              k: 2
+              num_candidates: 3
+
+  - match: { hits.hits.0._id: $bfloat16_result_1 }
+  - match: { hits.hits.1._id: $bfloat16_result_2 }
+
+  # [0.1, 0.2, 0.3] is encoded as float32 bytes in base64 as 'PczMzT5MzM0+mZma'
   - do:
       search:
         index: knn_query_base64_index
@@ -220,6 +276,37 @@ setup:
   - match: { hits.hits.0._id: $bit_result_1 }
   - match: { hits.hits.1._id: $bit_result_2 }
 
+  # [3] is encoded as hex byte '03'
+  - do:
+      search:
+        index: knn_query_base64_index
+        body:
+          fields: [ "name" ]
+          query:
+            knn:
+              field: vector_bit
+              query_vector: "03"
+              k: 2
+              num_candidates: 3
+
+  - match: { hits.hits.0._id: $bit_result_1 }
+  - match: { hits.hits.1._id: $bit_result_2 }
+
+---
+"Base64 float vector with decoded length not divisible by 4 fails":
+  # "AQID" decodes to 3 bytes (0x01 0x02 0x03)
+  - do:
+      catch: bad_request
+      search:
+        index: knn_query_base64_index
+        body:
+          query:
+            knn:
+              field: vector_float
+              query_vector: "AQID"
+              k: 2
+              num_candidates: 3
+
 ---
 "Invalid base64 encoding fails":
   - do:
@@ -249,3 +336,68 @@ setup:
               k: 2
               num_candidates: 3
 
+---
+"kNN query with base64 bfloat16 length divisible by 4":
+  - do:
+      indices.create:
+        index: knn_query_base64_bfloat16_len4
+        body:
+          settings:
+            number_of_shards: 1
+          mappings:
+            dynamic: false
+            properties:
+              name:
+                type: keyword
+              vector_bfloat16:
+                type: dense_vector
+                dims: 4
+                index: true
+                element_type: bfloat16
+                similarity: l2_norm
+
+  - do:
+      index:
+        index: knn_query_base64_bfloat16_len4
+        id: "1"
+        body:
+          name: doc1
+          vector_bfloat16: [0.1, 0.2, 0.3, 0.4]
+
+  - do:
+      indices.refresh:
+        index: knn_query_base64_bfloat16_len4
+
+  # [0.1, 0.2, 0.3, 0.4] encoded as bfloat16 bytes in base64: 'Pcw+TD6ZPsw='
+  - do:
+      search:
+        index: knn_query_base64_bfloat16_len4
+        body:
+          fields: [ "name" ]
+          query:
+            knn:
+              field: vector_bfloat16
+              query_vector: "Pcw+TD6ZPsw="
+              k: 1
+              num_candidates: 1
+
+  - match: { hits.total.value: 1 }
+  - match: { hits.hits.0._id: "1" }
+  - match: { hits.hits.0.fields.name.0: "doc1" }
+
+  # [0.1, 0.2, 0.3, 0.4] encoded as float32 bytes in base64: 'PczMzT5MzM0+mZmaPszMzQ=='
+  - do:
+      search:
+        index: knn_query_base64_bfloat16_len4
+        body:
+          fields: [ "name" ]
+          query:
+            knn:
+              field: vector_bfloat16
+              query_vector: "PczMzT5MzM0+mZmaPszMzQ=="
+              k: 1
+              num_candidates: 1
+
+  - match: { hits.total.value: 1 }
+  - match: { hits.hits.0._id: "1" }
+  - match: { hits.hits.0.fields.name.0: "doc1" }
