--- a/muted-tests.yml
+++ b/muted-tests.yml
@@ -333,6 +333,9 @@ tests:
 - class: org.elasticsearch.xpack.esql.qa.mixed.MixedClusterEsqlSpecIT
   method: test {csv-spec:spatial-grid.GridGeohexByBoundsDropLocation}
   issue: https://github.com/elastic/elasticsearch/issues/141233
+- class: org.elasticsearch.xpack.esql.spatial.SpatialPushDownGeoShapeIT
+  method: testQuantizedXY
+  issue: https://github.com/elastic/elasticsearch/issues/141234
 
 # Examples:
 #
