Fix tests yet again

--- a/x-pack/plugin/esql/qa/testFixtures/src/main/resources/mapping-all-types.json
+++ b/x-pack/plugin/esql/qa/testFixtures/src/main/resources/mapping-all-types.json
@@ -10,7 +10,7 @@
         "byte" : {
             "type" : "byte"
         },
-        "constant_keyword": {
+        "constant_keyword-foo": {
             "type": "constant_keyword",
             "value": "foo"
         },
