--- a/muted-tests.yml
+++ b/muted-tests.yml
@@ -339,6 +339,9 @@ tests:
 - class: org.elasticsearch.xpack.logsdb.StandardToLogsDbIndexModeRollingUpgradeIT
   method: testIndexing
   issue: https://github.com/elastic/elasticsearch/issues/141235
+- class: org.elasticsearch.index.codec.vectors.diskbbq.next.ESNextDiskBBQVectorsFormatTests
+  method: testSparseVectors
+  issue: https://github.com/elastic/elasticsearch/issues/141270
 
 # Examples:
 #
