[ES|QL] FIRST/LAST functions - Support IP/Boolean (#108385) (#140097)
- Add support for ip/boolean in the functions' signatures
- Map ip to bytesref. No dedicated state or aggregator is needed.
- Allow the state and aggregator templates to generate classes for the boolean type.
- Add a simple dataset with all types, multi-values, and nulls to exercise different scenarios during csv tests.
- Small refactoring in BlockTestUtils.
- Add heap attack tests to check circuit breaking when grouping on a large state of multivalued long fields, and another for giant text.

--- a/x-pack/plugin/esql/compute/build.gradle
+++ b/x-pack/plugin/esql/compute/build.gradle
@@ -500,6 +500,12 @@ tasks.named('stringTemplates').configure {
   def generateTwoStateFiles = { inputFile, prefix = "" ->
     def v1Props = [longProperties]
     def v2Props = [intProperties, longProperties, floatProperties, doubleProperties, bytesRefProperties]
+
+    if (prefix != "") {
+      // Add the boolean type for ALL_FIRST/ALL_LAST, but not for FIRST/LAST.
+      v2Props << booleanProperties
+    }
+
     v1Props.forEach { v1 ->
       v2Props.forEach { v2 ->
         def properties = [:]
@@ -996,6 +1002,14 @@ tasks.named('stringTemplates').configure {
           it.properties = addOccurrence(bytesRefProperties, Occurrence) + [Prefix: prefix]
           it.inputFile = inputFile
           it.outputFile = "org/elasticsearch/compute/aggregation/${prefix}${Occurrence}BytesRefByTimestampAggregator.java"
+        }
+        if (prefix != "") {
+          // Add the boolean type for ALL_FIRST/ALL_LAST, but not for FIRST/LAST.
+          template {
+            it.properties = addOccurrence(booleanProperties, Occurrence) + [Prefix: prefix]
+            it.inputFile = inputFile
+            it.outputFile = "org/elasticsearch/compute/aggregation/${prefix}${Occurrence}BooleanByTimestampAggregator.java"
+          }
         }
       }
     }
