--- a/docs/changelog.yml
+++ b/docs/changelog.yml
@@ -202,10 +202,12 @@ block:
   # Dictionary key can be a single product ID or comma-separated product IDs
   product:
     'elasticsearch':
+      create: ">non-issue, >test, >refactoring, :Delivery/Build, :Delivery/Tooling"
       publish:
         types:
           - docs
     'cloud-serverless':
+      create: ">non-issue, >test, >refactoring, :Delivery/Build, :Delivery/Tooling"
       publish:
         areas:
           - Allocation
@@ -220,7 +222,7 @@ block:
           - Engine
           - FIPS
           - Health
-          - "ILM"
+          - ILM
           - IdentityProvider
           - "Infra/CLI"
           - "Infra/Logging"
@@ -232,6 +234,7 @@ block:
           - Monitoring
           - Packaging
           - "Searchable Snapshots"
+          - SLM
           - "Snapshot/Restore"
           - Stats
           - Watcher
